// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlertsStat /> spec Alert Stat renders component with monitor and loading 1`] = `
<div>
  <div
    class="euiStat euiStat--leftAligned"
  >
    <div
      class="euiText euiText--small euiStat__description"
    >
      <p>
        Alert
         
        <button
          class="euiLink euiLink--primary"
          style="font-size: 12px;"
          type="button"
        >
          Info
        </button>
      </p>
    </div>
    <div
      class="euiTitle euiTitle--small euiStat__title"
      style="display: inline;"
    >
      <p
        class="euiTitle euiTitle--small euiStat__title"
        style="display: inline;"
      >
        -
         
      </p>
      <a
        class="euiLink euiLink--primary"
        href="/187218e9-1d42-5b75-a"
        rel="noopener noreferrer"
        style="font-size: 14px;"
        target="_blank"
      >
        View monitor 
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 8.5a.5.5 0 111 0V12a2 2 0 01-2 2H4a2 2 0 01-2-2V4a2 2 0 012-2h3.5a.5.5 0 010 1H4a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8.5zm-5.12.339a.5.5 0 11-.706-.707L13.305 2H10.5a.5.5 0 110-1H14a1 1 0 011 1v3.5a.5.5 0 11-1 0V2.72L7.88 8.838z"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`<AlertsStat /> spec Alert Stat renders component with monitor and not loading 1`] = `
<div>
  <div
    class="euiStat euiStat--leftAligned"
  >
    <div
      class="euiText euiText--small euiStat__description"
    >
      <p>
        Alert
         
        <button
          class="euiLink euiLink--primary"
          style="font-size: 12px;"
          type="button"
        >
          Info
        </button>
      </p>
    </div>
    <div
      class="euiTitle euiTitle--small euiStat__title"
      style="display: inline;"
    >
      <p
        class="euiTitle euiTitle--small euiStat__title"
        style="display: inline;"
      >
        9
         
      </p>
      <a
        class="euiLink euiLink--primary"
        href="/f899c56c-6299-5d0d-8"
        rel="noopener noreferrer"
        style="font-size: 14px;"
        target="_blank"
      >
        View monitor 
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiIcon-isLoading"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`<AlertsStat /> spec Alert Stat renders component with undefined monitor and loading 1`] = `
<div>
  <div
    class="euiStat euiStat--leftAligned"
  >
    <div
      class="euiText euiText--small euiStat__description"
    >
      <p>
        Alert
         
        <button
          class="euiLink euiLink--primary"
          style="font-size: 12px;"
          type="button"
        >
          Info
        </button>
      </p>
    </div>
    <div
      class="euiTitle euiTitle--small euiStat__title"
      style="display: inline;"
    >
      <p
        class="euiTitle euiTitle--small euiStat__title"
        style="display: inline;"
      >
        -
         
      </p>
    </div>
  </div>
</div>
`;

exports[`<AlertsStat /> spec Alert Stat renders component with undefined monitor and not loading 1`] = `
<div>
  <div
    class="euiStat euiStat--leftAligned"
  >
    <div
      class="euiText euiText--small euiStat__description"
    >
      <p>
        Alert
         
        <button
          class="euiLink euiLink--primary"
          style="font-size: 12px;"
          type="button"
        >
          Info
        </button>
      </p>
    </div>
    <div
      class="euiTitle euiTitle--small euiStat__title"
      style="display: inline;"
    >
      <p
        class="euiTitle euiTitle--small euiStat__title"
        style="display: inline;"
      >
        9
         
      </p>
    </div>
  </div>
</div>
`;

exports[`<AnomalyStat /> spec Anomaly Stat renders component without tooltip 1`] = `
<div>
  <div
    class="euiStat euiStat--leftAligned"
  >
    <div
      class="euiText euiText--small euiStat__description"
    >
      test description
    </div>
    <div
      class="euiTitle euiTitle--small euiStat__title"
      style="display: inline;"
    >
      test title
    </div>
  </div>
</div>
`;

exports[`<AnomalyStatWithTooltip /> spec Anomaly Stat with tooltip renders component with tooltip and loading 1`] = `
<div>
  <div
    class="euiStat euiStat--leftAligned"
  >
    <div
      class="euiText euiText--small euiStat__description"
    >
      <p>
        test description
         
        <span
          class="euiToolTipAnchor"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.5 11.508L7.468 8H6.25V7h2.401l.03 3.508H9.8v1H7.5zm-.25-6.202a.83.83 0 01.207-.577c.137-.153.334-.229.59-.229.256 0 .454.076.594.23.14.152.209.345.209.576 0 .228-.07.417-.21.568-.14.15-.337.226-.593.226-.256 0-.453-.075-.59-.226a.81.81 0 01-.207-.568zM8 13A5 5 0 108 3a5 5 0 000 10zm0 1A6 6 0 118 2a6 6 0 010 12z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </p>
    </div>
    <div
      class="euiTitle euiTitle--small euiStat__title"
      style="display: inline;"
    >
      -
    </div>
  </div>
</div>
`;

exports[`<AnomalyStatWithTooltip /> spec Anomaly Stat with tooltip renders component with tooltip and not loading 1`] = `
<div>
  <div
    class="euiStat euiStat--leftAligned"
  >
    <div
      class="euiText euiText--small euiStat__description"
    >
      <p>
        test description
         
        <span
          class="euiToolTipAnchor"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon-isLoading"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
      </p>
    </div>
    <div
      class="euiTitle euiTitle--small euiStat__title"
      style="display: inline;"
    >
      0.50-0.90
    </div>
  </div>
</div>
`;
